# cv-for-person-sandbox

./: .cursorrules  .gitignore  LICENSE  README.md  mypy.ini  pyproject.toml  ruff.toml
demo/: inference_image.py  inference_video.py  inference_webcam.py
pcv/models/: BaseModel.py  DeepLabv3Resnet101.py  FasterrcnnResnet50.py  KeypointRCNN.py  MpHolistic.py  Yunet.py
personcv/: Detector.py
personcv/models/: BaseModel.py  Yunet.py
py/: Detector.py  demo_image.py  demo_webcam.py
py/models/: Deeplabv3Mobilenetv3Large.py  Detector.py  FasterrcnnResnet50.py  MpHolistic.py  MpSelfieSegmentation.py  Yunet.py
src/: Detector.py  __init__.py  demo_image.py  demo_webcam.py
src/models/: BaseModel.py  DeepLabv3Resnet101.py  Deeplabv3Mobilenetv3Large.py  Detector.py  FasterrcnnResnet50.py  KeypointRCNN.py  MpSelfieSegmentation.py  Yunet.py
tests/: __init__.py  conftest.py  test_yunet.py
