[project]
name = "pcv"
version = "0.1.0"
description = "Sandbox for person detection"
readme = "README.md"
requires-python = ">=3.10,<4.0"
dependencies = [
    "mediapipe>=0.10.21",
    "opencv-python>=4.5.4", # for Yunet
    "torch>=2.7.1",
    "torchvision>=0.22.1",
    "tqdm>=4.67.1",
]

[dependency-groups]
dev = [
    "mypy>=1.15.0",
    "ruff>=0.11.5",
    "mdformat==0.7.21",
    "mdformat-footnote==0.1.1",
    "mdformat-frontmatter==2.0.8",
    "mdformat-gfm==0.4.1",
    "types-pyyaml>=6.0.12.20250402",
    "pytest>=8.4.1",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]
